--- a/css/portfolio_style.css
+++ b/css/portfolio_style.css
@@ -492,6 +492,9 @@ img {
 }
 
 
+/* Media
+=======================================================*/
+
 /* Responsive layout - iPad Fucking Pro*/
 @media screen and (max-width: 1366px) {
     .page{
