--- a/css/portfolio_style.css
+++ b/css/portfolio_style.css
@@ -404,9 +404,9 @@ img {
 }
 
 /* Add a background color to the active dot/circle */
-.active, .dot:hover {
+/* .active, .dot:hover {
     background-color: #717171;
-  }
+  } */
   
   /* Add an italic font style to all quotes */
   q {font-style: italic;}
