--- a/css/portfolio_style.css
+++ b/css/portfolio_style.css
@@ -100,7 +100,7 @@ q {
 .company_logo {
     margin-left: 1%;
     float: left;
-    padding-top: 1%;
+    /* padding-top: .5%; */
     position: fixed;
     z-index: 3;
 }
